<resources>
    <string name="app_name">ScreenX</string>
    <string name="card_text">Linen Dresses White\nNo Pattern </string>
    <string name="card_text_bestfit">Best Fit</string>

    <string name="card_brand_name">BRAND NAME</string>
    <string name="loreum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="sellingP">SELLING PRICE: </string>
    <string name="retailP">RETAIL PRICE: </string>
    <string name="size">SIZE:</string>
    <string name="closet">My Closet</string>
    <string name="user_name">Akshay Rohilla</string>
    <string name="user_id">#123412</string>
    <string name="your_rating">Your Rating:</string>
    <string name="total">Total Items:</string>
    <string name="loadned">Loaned:</string>
    <string name="available">Available:</string>

    <string name="price">$300</string>
    <string name="rprice">$1200</string>
    <string name="sizeM">M</string>
    <string name="sizeUS">US</string>
    <string name="howmany">How Many Units?</string>
    <string name="unitprice">UNIT PRICES:</string>
    <string name="stock">STOCK:</string>
    <string name="unitpriceis">$600</string>
    <string name="totstock">20</string>
    <string name="reviews">Reviews</string>
    <string name="report">Report a Problem</string>
    <string name="back">BACK</string>
    <string name="selectdates">Select Dates</string>
    <string name="loadmore">LOAD MORE</string>
    <string name="loaddots"> .  .  . </string>
    <string name="units">2 unt.</string>
    <string name="add_review">Add Review</string>
    <string name="uploadpics">Upload Photos</string>
    <string name="itfits">\"IT FIT ME WELL\"</string>
    <string name="loaned_items_fragment">LOANED ITEMS</string>
    <string name="available_items_fragment">AVAILABLE ITEMS</string>
    <string name="disables_items_fragment">DISABLED ITEMS</string>
    <string name="available_items">Available Items</string>
    <string name="select_all">Select All</string>
    <string name="disable_this">\tDISABLE THIS ITEM</string>
    <string name="category">CATEGORY</string>
    <string name="delete_text">Please select any item to delete</string>


</resources>