<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/Heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:singleLine="true"
        android:text="@string/closet"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintWidth_default="wrap" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView6"
        android:layout_width="38dp"
        android:layout_height="31dp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@+id/nameTv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/model"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.041" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTv"
        style="@style/Heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/user_name"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/youtratingTv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Id"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/user_id"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/nameTv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameTv"
        app:layout_constraintTop_toBottomOf="@+id/nameTv" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/youtratingTv"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="@dimen/_5sdp"
        android:text="@string/your_rating"
        app:layout_constraintBottom_toBottomOf="@+id/nameTv"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/nameTv"
        app:layout_constraintTop_toTopOf="@+id/nameTv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:constraint_referenced_ids="circleImageView,imageView6,textView"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:constraint_referenced_ids="youtratingTv,textView"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="4.5"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.666" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:progressTint="#FFCC01"
        android:rating="4"
        android:scaleX=".7"
        android:scaleY="0.7"
        android:stepSize="0.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/youtratingTv" />


    <TextView
        android:id="@+id/total"
        style="@style/TextViewStyleItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"

        android:layout_marginTop="4dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/loadned"
        style="@style/TextViewStyleItem"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loadned"
        app:layout_constraintBottom_toBottomOf="@+id/total"
        app:layout_constraintStart_toEndOf="@+id/total"
        app:layout_constraintTop_toTopOf="@+id/total"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/available"

        style="@style/TextViewStyleItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/available"
        app:layout_constraintBottom_toBottomOf="@+id/loadned"
        app:layout_constraintStart_toEndOf="@+id/loadned"
        app:layout_constraintTop_toTopOf="@+id/loadned"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalT"
        style="@style/HeadingItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="14"
        app:layout_constraintEnd_toEndOf="@+id/total"
        app:layout_constraintStart_toStartOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <TextView
        android:id="@+id/loadnedT"
        style="@style/HeadingItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:gravity="left"
        android:text="10"

        app:layout_constraintEnd_toEndOf="@+id/loadned"
        app:layout_constraintStart_toEndOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/loadned" />

    <TextView
        android:id="@+id/availableT"
        style="@style/HeadingItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="4"

        app:layout_constraintEnd_toEndOf="@id/available"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loadned"
        app:layout_constraintTop_toBottomOf="@+id/available" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/CustomTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/loadnedT"
        app:tabTextColor="@android:color/black">

    </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>