<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <View
                    android:id="@+id/view1"
                    android:layout_width="@dimen/_4sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_gravity="center"
                    android:background="@color/teal_700" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nameTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="2"
                    android:text="@string/available_items"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <CheckBox
                    android:visibility="gone"
                    android:id="@+id/checkbox_select_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:buttonTint="@color/black"
                    android:text="@string/select_all"
                    app:layout_constraintBottom_toBottomOf="@+id/nameTv"
                    app:layout_constraintEnd_toStartOf="@id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/nameTv" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/closeSelection"
                    android:layout_width="0dp"
           android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_baseline_close_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/disableItem"

                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/disable_style"
                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/disable_this"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                android:visibility="gone"
            app:tint="@color/teal_700" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/category"
                    android:textSize="12sp" />

                <View

                    android:id="@+id/view3"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/itemRecycler"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>