<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/_4sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginTop="16dp"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:constraint_referenced_ids="view1,itemRecycler"
            app:layout_constraintGuide_percent="0.05"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/available_items"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/view1"
            app:layout_constraintStart_toEndOf="@+id/view1"
            app:layout_constraintTop_toTopOf="@+id/view1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:constraint_referenced_ids="checkbox_select_all"
            app:layout_constraintGuide_percent="0.95"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/checkbox_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            app:layout_constraintBottom_toBottomOf="@+id/nameTv"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/nameTv" />

        <View
            android:id="@+id/view22"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/my_shape"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_1sdp"
            android:singleLine="true"
            android:text="@string/disable_this"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view22"
            app:layout_constraintEnd_toStartOf="@+id/selctor"
            app:layout_constraintTop_toTopOf="@+id/view22" />

        <ImageView
            android:id="@+id/selctor"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            app:layout_constraintBottom_toBottomOf="@+id/view22"
            app:layout_constraintEnd_toEndOf="@+id/view22"
            app:layout_constraintTop_toTopOf="@+id/view22"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_arrow_right_24" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/category"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/view22" />

        <View
            android:id="@+id/view3"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_160sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/hiddenItems"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="selctor,unit,view22,checkbox_select_all"
         />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>